Colaboratory kullanılarak oluşturuldu

--- a/per_kom_odev1.ipynb
+++ b/per_kom_odev1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPrBA7LmvZmolcHrb3YE9d",
+      "authorship_tag": "ABX9TyOZ5ulYwmOkbHOLFBnx+cH9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,30 +27,21 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "MLf7-RGQluIu",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "76e8150e-07d2-4b09-e1ae-31476d338d68"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Permütasyon hesabı için lütfen sayıları giriniz.\n",
-            "1. Sayı Giriniz: 5\n",
-            "2. Sayı Giriniz: 2\n",
-            "\n",
-            "Sonuç: 20.0\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        " \n",
+        "Alıştırma: Permütasyon nesnelerin diziliş sayısını bulmamızı sağlar.4arkadaştan 3’ü masaya oturucaktır.\n",
+        "\n",
+        "Bu 3 kişi kaç farklı şekilde masaya oturabilir sorusuna çözüm bulmak için permütasyon kullanırız.\n",
+        "\n",
+        "Python ile aldığı sayılara göre permütasyon hesabı yapan kodlar aşağıdadır."
+      ],
+      "metadata": {
+        "id": "1FkMdAiBm_UT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def faktoriyelHesapla(i):\n",
         "    \n",
         "    if i==1:       \n",
@@ -77,20 +68,28 @@
         "sayi2 = int(input(\"2. Sayı Giriniz: \")) \n",
         " \n",
         "print(\"\\nSonuç:\", permutasyonHesapla(sayi1,sayi2) )"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Alıştırma: Permütasyon nesnelerin diziliş sayısını bulmamızı sağlar.4arkadaştan 3’ü masaya oturucaktır.\n",
-        "\n",
-        "Bu 3 kişi kaç farklı şekilde masaya oturabilir sorusuna çözüm bulmak için permütasyon kullanırız.\n",
-        "\n",
-        "Python ile aldığı sayılara göre permütasyon hesabı yapan kodlar yukarıdadır."
       ],
       "metadata": {
-        "id": "1FkMdAiBm_UT"
-      }
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qNizgYHFTjxT",
+        "outputId": "eb84b63d-9d3a-4e7e-bbba-87fdd498d3f6"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Permütasyon hesabı için lütfen sayıları giriniz.\n",
+            "1. Sayı Giriniz: 5\n",
+            "2. Sayı Giriniz: 2\n",
+            "\n",
+            "Sonuç: 20.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
