Colaboratory kullanılarak oluşturuldu

--- a/per_kom_odev1.ipynb
+++ b/per_kom_odev1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZ5ulYwmOkbHOLFBnx+cH9",
+      "authorship_tag": "ABX9TyNbUSz4lnaGSvf2p/RI3rIN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
         "id": "qNizgYHFTjxT",
         "outputId": "eb84b63d-9d3a-4e7e-bbba-87fdd498d3f6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
         "id": "BCgji4TbMybQ",
         "outputId": "3982a67a-cf54-494e-8c32-a18bf82189a9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,31 +134,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Soru2 : Bir toplulukta 8 kadın ve 6 erkek bulunmaktadır. Topluluktan seçilecek 4 kişilik bir komite için:\n",
+        "Soru2 : Türkiye ve Suriye sınırındaki hava alanını izlemek için envanterde 8 adet haraketli radar, 6 adet sabit platformlu radar  bulunmaktadır. Envanterden seçilecek 4 radar için;\n",
         "\n",
-        "a) Komitenin tamamı kadınlardan oluşacak şekilde kaç farklı seçim yapılabilir?\n",
+        "a) Belirlenen hava sahasının tamamını haraketli radar platformları ile izlemek için kaç farklı seçim yapılabilir?\n",
         "\n",
-        "b) En az bir erkeğin olduğu bir komite kaç farklı şekilde seçilebilir?\n",
+        "b) En az bir sabit radar ile hava sahasını izlemek için kaç farklı şekilde seçim yapılabilir?\n",
+        "\n",
         "\n",
         "Çözüm:\n",
         "\n",
-        "a) Komitenin tamamı kadınlardan oluşacak şekilde seçim yapmak için, sadece kadınların seçilmesi gerekmektedir. Topluluktaki kadın sayısı 8 olduğundan, 4 kadın seçmek için 8'in kombinasyonu olan C(8,4) kullanılır. Bu nedenle, tamamı kadınlardan oluşan bir komite için 70 farklı seçim yapılabilir.\n",
+        "a) Hava sahasının tamamını haraketli platformlu radarlar ile izleyecek şekilde seçim yapmak için, sadece haraketli platformlu radarlar seçilmesi gerekmektedir. \n",
         "\n",
-        "b) En az bir erkeğin olduğu bir komite seçmek için, ya 1, 2, 3 ya da 4 erkek seçilmelidir. Bu durumlardan her biri için, kalan kişiler kadın olmalıdır.\n",
+        "Envanterdeki haraketli radar sayısı 8 olduğundan, 4 haraketli radar seçmek için 8'in kombinasyonu olan C(8,4) kullanılır. Bu görevde, hava sahasının tamamı haraketli radarlar ile izlenecek şekilde 70 farklı seçim yapılabilir.\n",
         "\n",
-        "1 erkek ve 3 kadın seçmek için, 6 erkek arasından 1 seçim yapılmalıdır (C(6,1)) ve 8 kadın arasından 3 seçim yapılmalıdır (C(8,3)). Bu durumda, toplam seçim sayısı 6 x 56 = 336'dır.\n",
+        "b) En az bir sabit platformlu radarın olduğu bir seçim için, ya 1, 2, 3 ya da 4 sabit platformlu radar seçilmelidir. Bu durumlardan her biri için, kalan radarlar haraketli platform üzerinde olmalıdır.\n",
         "\n",
-        "2 erkek ve 2 kadın seçmek için, 6 erkek arasından 2 seçim yapılmalıdır (C(6,2)) ve 8 kadın arasından 2 seçim yapılmalıdır (C(8,2)). Bu durumda, toplam seçim sayısı 15 x 28 = 420'dir.\n",
+        "1 sabit platformlu ve 3 haraketli radar seçmek için, 6 sabit platformlu radar arasından 1 seçim yapılmalıdır (C(6,1)) ve 8 haraketli radar arasından 3 seçim yapılmalıdır (C(8,3)). Bu durumda, toplam seçim sayısı 6 x 56 = 336'dır.\n",
         "\n",
-        "3 erkek ve 1 kadın seçmek için, 6 erkek arasından 3 seçim yapılmalıdır (C(6,3)) ve 8 kadın arasından 1 seçim yapılmalıdır (C(8,1)). Bu durumda, toplam seçim sayısı 20 x 8 = 160'dır.\n",
+        "2 sabit platformlu radar ve 2 haraketli radar seçmek için, 6 sabit platformlu radar arasından 2 seçim yapılmalıdır (C(6,2)) ve 8 haraketli radar arasından 2 seçim yapılmalıdır (C(8,2)). Bu durumda, toplam seçim sayısı 15 x 28 = 420'dir.\n",
         "\n",
-        "4 erkek ve 0 kadın seçmek için, 6 erkek arasından 4 seçim yapılmalıdır (C(6,4)). Bu durumda, toplam seçim sayısı 15'dir.\n",
+        "3 sabit platformlu radar ve 1 haraketli radar seçmek için, 6 sabit platformlu radar arasından 3 seçim yapılmalıdır (C(6,3)) ve 8 haraketli radar arasından 1 seçim yapılmalıdır (C(8,1)). Bu durumda, toplam seçim sayısı 20 x 8 = 160'dır.\n",
+        "\n",
+        "4 sabit platformlu radar ve 0 haraketli radar seçmek için, 6 sabit platformlu radar arasından 4 seçim yapılmalıdır (C(6,4)). Bu durumda, toplam seçim sayısı 15'dir.\n",
         "\n",
         "Toplam seçim sayısı, tüm durumlar için toplamı alarak bulunur:\n",
         "\n",
         "336 + 420 + 160 + 15 = 931\n",
         "\n",
-        "Bu nedenle, en az bir erkeğin olduğu bir komite için 931 farklı seçim yapılabilir."
+        "Bu nedenle, en az bir sabit platformlu radarın olduğu bir hava izleme görevi için 931 farklı seçim yapılabilir."
       ],
       "metadata": {
         "id": "gKhw9iM_M5hO"
@@ -171,34 +174,34 @@
         "\n",
         "# a) Komitenin tamamı kadınlardan oluşacak şekilde seçim yapmak\n",
         "# için 8 kadın arasından 4 tanesinin seçilmesi gerekiyor.\n",
-        "all_female_committee = math.comb(8, 4)\n",
-        "print(\"Tamamı kadınlardan oluşan komite sayısı:\", all_female_committee)\n",
+        "all_dynamic_plat_radars = math.comb(8, 4)\n",
+        "print(\"Tamamı haraketli radarların olduğu senaryo :\", all_dynamic_plat_radars)\n",
         "\n",
         "# b) En az bir erkeğin olduğu bir komite için, kadınların ve erkeklerin\n",
         "# seçimleri ayrı ayrı hesaplanıp toplamı alınabilir.\n",
-        "one_or_more_male_committee = (\n",
+        "one_or_more_static_radar = (\n",
         "    math.comb(6, 1) * math.comb(8, 3) +\n",
         "    math.comb(6, 2) * math.comb(8, 2) +\n",
         "    math.comb(6, 3) * math.comb(8, 1) +\n",
         "    math.comb(6, 4) * math.comb(8, 0)\n",
         ")\n",
-        "print(\"En az bir erkeğin olduğu komite sayısı:\", one_or_more_male_committee)\n"
+        "print(\"En az bir sabit radarın olduğu senaryo:\", one_or_more_static_radar)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ES9QkuT-M53H",
-        "outputId": "885dc654-c0c5-433d-d9f5-8501821c00fa"
+        "outputId": "1e07999b-b74c-41c2-80e2-3206ce086c42"
       },
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tamamı kadınlardan oluşan komite sayısı: 70\n",
-            "En az bir erkeğin olduğu komite sayısı: 931\n"
+            "Tamamı haraketli radarların olduğu senaryo : 70\n",
+            "En az bir sabit radarın olduğu senaryo: 931\n"
           ]
         }
       ]
