Colaboratory kullanılarak oluşturuldu

--- a/per_kom_odev1.ipynb
+++ b/per_kom_odev1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbUSz4lnaGSvf2p/RI3rIN",
+      "authorship_tag": "ABX9TyOFHHP4n5vFMRBIdLnA/3DD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -172,12 +172,12 @@
       "source": [
         "import math\n",
         "\n",
-        "# a) Komitenin tamamı kadınlardan oluşacak şekilde seçim yapmak\n",
-        "# için 8 kadın arasından 4 tanesinin seçilmesi gerekiyor.\n",
+        "# a) Hava sahasının tamamını haraketli platformlu radarlar ile izleyecek şekilde seçim yapmak\n",
+        "# için 8 hareketli radar arasından 4 tanesinin seçilmesi gerekiyor.\n",
         "all_dynamic_plat_radars = math.comb(8, 4)\n",
         "print(\"Tamamı haraketli radarların olduğu senaryo :\", all_dynamic_plat_radars)\n",
         "\n",
-        "# b) En az bir erkeğin olduğu bir komite için, kadınların ve erkeklerin\n",
+        "# b) En az bir sabit platformlu radarın olduğu bir seçim için, haraketli radarların ve sabit platformlu radarların\n",
         "# seçimleri ayrı ayrı hesaplanıp toplamı alınabilir.\n",
         "one_or_more_static_radar = (\n",
         "    math.comb(6, 1) * math.comb(8, 3) +\n",
@@ -192,9 +192,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ES9QkuT-M53H",
-        "outputId": "1e07999b-b74c-41c2-80e2-3206ce086c42"
+        "outputId": "f6603c0a-e2f3-464b-bc55-f4103a632de5"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
