Colaboratory kullanılarak oluşturuldu

--- a/ODEV3_kosullu_olasilik.ipynb
+++ b/ODEV3_kosullu_olasilik.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5yRi0IeONgxWiilWOTC8S",
+      "authorship_tag": "ABX9TyPJVQ38jhZ6aWVTbsaDTKMz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,8 @@
         "\n",
         "P(B|A) : Bozuk yonganın testinin pozitif çıkma olasılığı = 0.80\n",
         "\n",
-        "P(A|B)=P(B|A)*P(A)/P(B) => (0.80 * 1/43) / (5/43) = 0.16 = %16 bulunur.\n",
+        "P(A|B)= [P(B|A) * P(A)] / P(B) => (0.80 * 1/43) / (5/43) = 0.16 = %16 bulunur.\n",
+        "\n",
         "\n"
       ],
       "metadata": {
